@@ -3,23 +3,28 @@
                    			TODO LIST - SPECIFIC
 ********************************************************************************
 
+#### BUG
+********************************************************************
+You have 1 dependent records.
+You are going as well to remove all the SIP/IAX accounts attached to this card! Please comfirm that you really want to remove that SIP/IAX Accounts ?
+
+
+#### Check voice one 
+********************************************************************
+SIP JAVA Phone
+
+
 #### MoneyBooker bug
 ********************************************************************
 http://myaccount.call-labs.com/checkout_process.php?sess_id=58u4ckvmu0e0eedn9k872v1od4
 Fatal error: Call to undefined method moneybookers::get_CurrentCurrency() in /var/www/html/svn/trunk/A2BCustomer_UI/lib/epayment/classes/payment.php on line 168
 
 
-#### check files 
-********************************************************************
-A2BCustomer_UI/lib/epayment/includes/methods/*
-
-define action url from conf file
-A2BCustomer_UI/lib/epayment/methods/moneybookers.php
 
 #### ADD referial ID : Admin & customer (conf)
 ********************************************************************
 https://www.moneybookers.com/app/?rid=811621
-
+https://www.paypal.com/es/mrb/pal=PGSJEXAEXKTBU
 
 #### BUG : Batch update in Rates
 ********************************************************************
