@@ -206,8 +206,8 @@ enable_captcha = YES
 ; amount of credit applied to a new user.
 credit = 0
 
-; ID Tariffgroup to use, check the ID in the tariffgroup list - WebUI
-tariff = 1
+; the list of id of call plans which will be shown in signup.
+callplan_id_list = 1, 2
 
 ; Specify whether the card is created as active or pending
 activated = no
@@ -245,9 +245,6 @@ activatedbyuser = no
 
 ; url of the customer interface to display after activation
 urlcustomerinterface = http://localhost/A2BCustomer_UI/
-
-; the list of id of call plans which will be shown in signup.
-callplan_id_list = 1,2
 
 
 ; PAYPAL SETTINGS
@@ -396,6 +393,8 @@ voucher_export_field_list = id, voucher, credit, tag, activated, usedcardnumber,
 ; Advanced mode - Display additional configuration options on the ratecard (progressive rates, musiconhold, ...)
 advanced_mode = NO
 
+; Delete the SIP/IAX Friend & callerid when a card is deleted
+delete_fk_card = yes
 
 ; This section is basically used when we create a new friend 
 ; when you create a SIP IAX friend for a card the following parameters will define the default value for the peer creation
